--- a/client/index.html
+++ b/client/index.html
@@ -12,12 +12,12 @@
         <div class="navbar-inner">
             <div class="container">
                 <a class="brand" href="/">Movie Database</a>
-                <ul class="nav">
-                    <li class="active">
-                        <a href="/">Home</a>
+                <ul>
+                    <li >
+                        <a  href="/">Home</a>
                     </li>
-                    <li>
-                        <a href="/movies">Movies</a>
+                    <li ng-class="{active:isActive('/movies')}">
+                        <a  href="/movies"> Movies</a>
                     </li>
                     <li>
                         <a href="/actors">Actors</a>
