[UPDATE] fixed missing class

--- a/client/index.html
+++ b/client/index.html
@@ -13,10 +13,10 @@
             <div class="container">
                 <a class="brand" href="/">Movie Database</a>
                 <ul>
-                    <li >
+                    <li class="active">
                         <a  href="/">Home</a>
                     </li>
-                    <li ng-class="{active:isActive('/movies')}">
+                    <li>
                         <a  href="/movies"> Movies</a>
                     </li>
                     <li>
